# oauth_origami_demo

./: README.md  pyproject.toml
app/: auth0.py  dependencies.py  main.py  settings.py
